manifests/base/microservices/user-db/user-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: user-db
  namespace: sock-shop
  labels:
    app: user-db

spec:
  serviceName: "user-db"
  replicas: 2

  selector:
    matchLabels:
      app: user-db

  template:
    metadata:
      labels:
        app: user-db

    spec:
      securityContext:        # pod-level: correct position
        fsGroup: 999

      containers:
        - name: user-db
          image: quay.io/powercloud/sock-shop-user-db:latest
          imagePullPolicy: IfNotPresent
          securityContext:    # container-level
            runAsUser: 999
            readOnlyRootFilesystem: true

          ports:
            - name: mongo
              containerPort: 27017

          volumeMounts:
            - name: users-db-vol
              mountPath: /data/db-users
            - name: users-db-temp-vol
              mountPath: /tmp

      volumes:
        - name: users-db-temp-vol
          emptyDir: {}

  volumeClaimTemplates:
    - metadata:
        name: users-db-vol
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ebs-sc
        resources:
          requests:
            storage: 1Gi
