manifests/base/microservices/user-db/user-db-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: user-db
  labels:
    name: user-db
  namespace: sock-shop
spec:
  clusterIP: None
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    name: user-db
