manifests/base/microservices/user-db/user-db-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: user-db-access
  namespace: sock-shop

spec:
  podSelector:
    matchLabels:
      app: user-db

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: user
      ports:
        - protocol: TCP
          port: 27017
